[project]
name = "pyrust-pipeline-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.13.1",
]

[build-system]
requires = ["maturin>=1.13.1"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
